Fixed method call error for JDK 1.4 (Float.valueOf(float))